--- a/src/configs/SATRN.yaml
+++ b/src/configs/SATRN.yaml
@@ -6,7 +6,7 @@ resize_hw:
 use_rgb: False
 label_maxlen: 25
 seed: 42
-model_dir: "../saved_models/satrn"
+model_dir: "/content/drive/MyDrive/saved_models/satrn_2"
 
 hidden_size: 512
 filter_size: 2048
@@ -18,19 +18,15 @@ rot_stddev: 0.6
 
 train:
   dataset_paths:
-      - "../data/train/MJS90/mjsynth_*_case-words-*.tfrecord"     # 9M   mjsynth train+valid+test
-      - "../data/train/MJS90/synth90_alpha_case-words-*.tfrecord" # 5.5M synthtext without special symbol
-      - "../data/train/MJS90/synth90_spe_case-words-*.tfrecord"   # 1.5M synthtext with special symbol
+      - "../data/train/ai_hub-words-*.tfrecord"     # 9M   mjsynth train+valid+test
   dataset_portions:
-    - 0.5
-    - 0.375
-    - 0.125
+    - 1
   lowercase: False
   alphanumeric: False
-  batch_size: 256
+  batch_size: 64
   num_threads: 8
   tune_from: ""
-  max_num_steps: 250001
+  max_num_steps: 100001
   verbose: False
   save_steps: 5000
   summary_steps: 1000
@@ -44,30 +40,19 @@ train:
 
 valid:
   dataset_paths:
-      - "../data/test/cute80/gt.txt"
-      - "../data/test/icdar03/gt.txt"
-      - "../data/test/icdar13/gt.txt"
-      - "../data/test/icdar15/gt.txt"
-      - "../data/test/iiit5k/gt.txt"
-      - "../data/test/svt/gt.txt"
-      - "../data/test/svtp/gt.txt"
-  lowercase: True
-  alphanumeric: True
-  batch_size: 256
+      - "../data/valid/gt_valid.txt"
+
+  lowercase: False
+  alphanumeric: False
+  batch_size: 64
   steps: 1000
 
 eval:
   dataset_paths: 
-      - "../data/test/cute80/gt.txt"
-      - "../data/test/icdar03/gt.txt"
-      - "../data/test/icdar13/gt.txt"
-      - "../data/test/icdar15/gt.txt"
-      - "../data/test/iiit5k/gt.txt"
-      - "../data/test/svt/gt.txt"
-      - "../data/test/svtp/gt.txt"
-  lowercase: True
-  alphanumeric: True
-  model_path: "../saved_models/satrn/model"
-  batch_size: 256
+      - "../data/test/gt_test.txt"
+  lowercase: False
+  alphanumeric: False
+  model_path: "/content/drive/MyDrive/saved_models/satrn_2"
+  batch_size: 64
   verbose: False
 
